<resources>
    <string name="app_name">CloneFeed</string>
    <string name="contect">Vcs k têm como apelido nome de um país, cidade ou mesmo animal cheguem so aki e expliquem a vossa árvore genealógica 🤔</string>
    <string name="postSubtitle">"VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST   VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST   VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST   VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST  VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST   VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST    VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST   VAGNER.BJ.ST VAGNER.BJ.ST VAGNER.BJ.ST   VAGNER.BJ.ST "</string>
    <string name="Like">Like</string>
    <string name="comentar">Comment</string>
    <string name="copartilar">Share</string>
    <string name="search">Search</string>
</resources>