<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_view_user"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        tools:srcCompat="@tools:sample/avatars"
        tools:ignore="RtlCompat" />
    <TextView
        android:id="@+id/text_view_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/image_view_user"
        app:layout_constraintTop_toTopOf="@id/image_view_user"
        app:layout_constraintEnd_toStartOf="@id/image_view_more"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="User A"
        />
        <ImageView
            android:id="@+id/image_view_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_view_username"
            app:srcCompat="@drawable/ic_baseline_more_horiz_24"
            tools:ignore="VectorDrawableCompat"
            app:tint="@color/ligthGray"
            android:layout_marginRight="16dp" />
        <TextView
            android:id="@+id/text_view_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/ligthGray"
            app:layout_constraintBottom_toBottomOf="@id/image_view_user"
            app:layout_constraintStart_toEndOf="@id/image_view_user"
            android:layout_marginLeft="8dp"
            tools:text="2 min"
            />
    <ImageView
        android:id="@+id/image_view_globo"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        app:srcCompat="@drawable/ic_baseline_language_24"
        tools:ignore="VectorDrawableCompat"
        app:tint="@color/ligthGray"
        app:layout_constraintBottom_toBottomOf="@id/text_view_time"
        app:layout_constraintStart_toEndOf="@id/text_view_time"
        app:layout_constraintTop_toTopOf="@id/text_view_time"
        android:layout_marginLeft="8dp" />
    <TextView
        android:id="@+id/text_view_content"
        android:layout_width="0dp"
        tools:text="@string/contect"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:lineSpacingExtra="2dp"
        app:layout_constraintEnd_toEndOf="@id/image_view_more"
        app:layout_constraintStart_toStartOf="@id/image_view_user"
        app:layout_constraintTop_toBottomOf="@id/text_view_time"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/image_view_post"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_content"
        app:layout_constraintDimensionRatio="16:9"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        />
    <LinearLayout
        android:id="@+id/post_conteiner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/image_view_post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/ligtherGray"
        >
        <TextView
            android:id="@+id/text_view_post_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            tools:text="VAGNER.BJ.ST"/>
        <TextView
            android:id="@+id/text_view_post_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"

            android:maxLines="2"
            android:ellipsize="end"
            android:textStyle="bold"
            android:textColor="@color/black"
            tools:text="@string/postSubtitle"/>
    </LinearLayout>
   <Button
            android:id="@+id/button_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/ic_like"
            android:text="@string/Like"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@+id/button_comment"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/post_conteiner"
            app:layout_constraintTop_toBottomOf="@id/post_conteiner" />
        <Button
            android:id="@+id/button_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:text="@string/comentar"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@+id/button_share"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_like"
            app:layout_constraintTop_toBottomOf="@id/post_conteiner"
            android:background="?android:selectableItemBackground"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/ic_comment" />

        <Button
            android:id="@+id/button_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:textColor="@color/black"
            android:text="@string/copartilar"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@id/post_conteiner"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_comment"
            app:layout_constraintTop_toBottomOf="@id/post_conteiner"
            android:drawableLeft="@drawable/ic_share" />


</androidx.constraintlayout.widget.ConstraintLayout>